# MLOps-mdsist

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  data.dvc  dist.env  docker-compose.yml  dvc.yaml  evidently_app.py  mnist_datacard.md  model_card_template.md  params.yaml  pynblint_pre_commit.py  pyproject.toml  run.sh
.dvc/: config
.github/workflows/: main.yml  mdsist-tests.yml
data/: raw.dvc
docs/: mkdocs.yml
docs/docs/: index.md
evidently-monitoring/: current_data.csv
mdist/: __init__.py  dataset.py  features.py  plots.py
mdist/modeling/: predict.py  train.py
mdsist/: __init__.py  api.py  app.ipynb  app.py  architectures.py  config.py  current_data-drift.csv  current_data.csv  dataset.py  evidently_app.py  features.py  plots.py  predictor.py  preprocessing.py  reference_data.csv  trainer.py  util.py
mdsist/features/: deepchecks_validation.py  parser.py
mdsist/mlruns/0/: meta.yaml
mdsist/modeling/: predict.py  test.py  train.py
notebooks/: 1.0-ji-raw-data-preprocessing.ipynb  1.0-ji-raw-data-visualization.ipynb  2.0-ji-raw-data-split.ipynb  3.0-icc-train.ipynb  4.0-icc-test.ipynb  5.0-aag-ji-app.ipynb  app.ipynb  raw_data_preprocessing.ipynb  raw_data_visualization.ipynb
notebooks/mlruns/0/: meta.yaml
services/node_exporter/: docker-compose.yml
services/prometheus/: docker-compose.yml
services/prometheus/config/: prometheus.yml
tests/mdsist/: test_api.py  test_architectures.py  test_config.py  test_preprocessing.py  test_test.py  test_trainer.py  test_util.py
