[project]
name = "mdsist"
version = "0.0.1"
description = "Machine Learning project around MNIST dataset"
authors = [
  { name = "MDSIST Team" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["mdsist"]
force_sort_within_sections = true

[tool.poetry]
name = "mdsist"
version = "0.1.0"
description = "Machine learning project around MNIST dataset"
authors = ["pol-arevalo-soler <pol.arevalo@estudiantat.upc.edu>, adriaag <adria.aumatell@estudiantat.upc.edu>, rubenvb01 <ruben.villanueva@estudiantat.upc.edu>,  jizyong@gmail.com <zhengyong.ji@estudiantat.upc.edu>, gnscc <ignasi.cervero@estudiantat.upc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"
pyarrow = "^17.0.0"
mlflow = "^2.16.2"
typer = "^0.12.5"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
torch = { version = "2.4.1", source="torch"}
torchvision = { version = "0.19.1", source="torch"}
codecarbon = "^2.7.1"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylint = "^3.2.7"
pytest = "^8.3.3"
isort = "^5.13.2"
pre-commit = "^3.8.0"
ipykernel = "^6.29.5"
dvc = "^3.55.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
